--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://rajesh0011.github.io/convert",
   "name": "routing-demo",
   "version": "0.1.0",
   "private": true,
@@ -6,12 +7,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "browser-image-compression": "^2.0.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "gifshot": "^0.4.5",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.10",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.8",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "gh-pages": "^6.2.0"
   }
 }
