--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rajesh0011.github.io/convert",
+  "homepage": "https://rajesh0011.github.io/convert",
   "name": "routing-demo",
   "version": "0.1.0",
   "private": true,
